--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
 
 [tool.ruff]
+target-version = "py311"
 line-length = 100
-select = ["E","F","I","B","UP","PL"]
-ignore = ["E501"]
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP", "PLR", "PLW"]
+ignore = [
+  "E203",  # compatibility with formatter
+  "E501",  # line length (handled in dev, not CI failure)
+]
